tests/NormalTests/paczka1/fuzzy1/41046863.err
Error in line 4: S971 A668 25,0
Error in line 1: 7jDGj S971 24,9
Error in line 7: S971 S971 26,2
Error in line 10: S971 A668 94,9
Error in line 14: S971 S96 83,3
Error in line 13: v4xz S971 45,7
Error in line 24: 7jDGj A668 -1,3
Error in line 27: 4RENlOEew2W S96 16,27
Error in line 22: 7jDGj A668 71,4
